Realigned module names to match artifactIds. Fixed some aspects of the website generation related to broken links and the overall build process.

--- a/src/site/resources/css/custom.css
+++ b/src/site/resources/css/custom.css
@@ -22,23 +22,25 @@
 .projectVersion {
   padding-right: 0.5rem;
 }
-.header {
+.subhead.header {
   background: #fff url(../images/fates.jpg) center;
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../images/fates.jpg) center;
   background-size: cover;
   background-repeat: repeat, no-repeat;
-  height: 527px;
+  /* height: 527px; */
   position: relative;
   background-position: center center, center top;
   width: 100%;
 }
-.header h1, .header p {
+.subhead.header h1, .subhead.header p {
   color: white;
   padding: 10px;
 }
+/*
 @media (max-width: 576px) {
   .banner {
     align-items: flex-start;
     height: 400px;
   }
 }
+*/
